# dnd_player

./: .gitignore  Cargo.toml  bad_test.yaml  output.yaml  test.yaml
src/: data.rs  main.rs  state.rs
src/data/: background.rs  character.rs  classes.rs  gender.rs  names.rs  races.rs  spell.rs  stats.rs  utils.rs
src/state/: play_object.rs  play_state.rs
test_yaml/: input.yaml  input2.yaml  output.yaml
