[package]
name = "dnd_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
term-table = "1.3.2"
crossterm = "0.22"
rand = "0.8.5"
strum = "0.24"
strum_macros = "0.24"
dialoguer = { version = "0.10.2", features=["fuzzy-select"] }